<resources>
    <string name="app_name">Weather Report</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_multimedia">Multimedia</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_multimedia">Multimedia</string>
    <string name="title_activity_settings">Settings</string>


    <string name="general_settings_header">General</string>

    <!-- About Screen -->
    <string name="title_text">Weather Report Application</string>
    <string name="description_text">
        The application is developed using Android Studio. With this app, users can access a comprehensive weather forecast for the next 9 days in Hong Kong,
        gaining valuable insights into the upcoming weather conditions.\n
        Additionally, the app offers a range of customizable settings, allowing users to personalize their experience and tailor it to their specific preferences.\n
        The following is our project group.</string>

    <!-- Multimedia Screen -->
    <string name="video1_title">Storm Surge</string>
    <string name="video2_title">Swells from distant typhoons</string>
    <string name="video3_title">Thunderstorms</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Nine Day Forecast Activity -->
    <string name="nineDaysForecast_title">9 Days Forecast</string>

    <!--General-Vibration Preference-->
    <string name="vibration_title">Vibration</string>
    <string name="vibration_summary">Enable vibration on click</string>
    <!--General-Sound Effects Preference-->
    <string name="soundEffect_title">Sound Effects</string>
    <string name="soundEffect_summary">Enable sound effects on click</string>

</resources>